# linhist

./: .pre-commit-config.yaml  LICENSE  README.md  linhist.py  pyproject.toml
.github/workflows/: pre-commit.yaml
